# chuckle

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  app.py  db.py  ingest.py  prompts.py  pyproject.toml
docs/: agent-explainer.html  implementation_plan.md  implementation_thoughts.md  scraper-spec.md  scraper_implementation_plan.md  spec.md  test_redundancy_review.md
evals/: evaluate.py  runner.py
evals/cases/: ground_cases.json
evals/scorers/: __init__.py  registry.py  text_scorers.py  tool_scorers.py
scripts/: scrape_nhs.py
src/: agent.py  constants.py  db.py  ingest.py  prompts.py
src/scraper/: classifier.py  constants.py  crawler.py  db.py  fetcher.py  main.py  normaliser.py  robots.py  scope.py
tests/: conftest.py  test_agent_streaming.py  test_app_smoke.py  test_db.py  test_db_security.py  test_ingest.py  test_prompts.py
tests/fixtures/: feeds_only.csv
tests/scraper/: conftest.py  test_classifier.py  test_crawler.py  test_db.py  test_fetcher.py  test_normaliser.py  test_scope.py
tests/scraper/fixtures/: baby_index.html  caring_for_newborn_index.html  helping_baby_sleep_article.html
