[project]
name = "chuckle"
version = "0.1.0"
description = "Local AI assistant for querying Huckleberry baby-activity CSV exports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40,<2",
    "pandas>=2.2,<3",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "beautifulsoup4>=4.14.3",
    "logfire>=4.33.0",
    "opentelemetry-instrumentation-sqlite3>=0.62b1",
    "huckleberry-api>=0.2.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "numpy>=2.4.5",
    "pandas>=2.3.3",
    "pytest>=8,<9",
    "pytest-httpx>=0.35.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.logfire]
ignore_no_config = true
